Fix visibility before first search

--- a/frontend/base.css
+++ b/frontend/base.css
@@ -1,14 +1,3 @@
-#main {
-    max-width: 50%;
-    margin: 0 auto;
-}
-
-@media (max-width: 1000px) {
-    #main {
-        max-width: 90%;
-        margin: 0 auto;
-    }    
-}
 
 .search-wrapper {
     margin: 0 auto;
@@ -88,13 +77,4 @@
 .pagination-number.active {
     color: #fff;
     background: #0085b6;
-}
-
-#prev-page-btn, #next-page-btn {
-    user-select: none
-}
-
-#prev-page-btn a, #next-page-btn a {
-    color: blue;
-    cursor: pointer;
 }
